# cheshire-cat

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
crates/cheshire-ai/: Cargo.toml
crates/cheshire-ai/src/: lib.rs  orchestrator.rs  prompt.rs
crates/cheshire-formats/: Cargo.toml
crates/cheshire-formats/src/: csv.rs  error.rs  html.rs  json.rs  lib.rs  ooxml.rs  plaintext.rs  po.rs  xliff.rs
crates/cheshire-qa/: Cargo.toml
crates/cheshire-qa/src/: lib.rs  numbers.rs  tags.rs
crates/cheshire-segmenter/: Cargo.toml
crates/cheshire-segmenter/src/: lib.rs
crates/cheshire-tm/: Cargo.toml
crates/cheshire-tm/migrations/: 0002_unique_records.sql
crates/cheshire-tm/src/: glossary.rs  lib.rs  matcher.rs  store.rs  tmx.rs  xliff.rs
crates/cheshire-tm/tests/: integration.rs
crates/felix-ai/: Cargo.toml
crates/felix-ai/src/: lib.rs
crates/felix-qa/: Cargo.toml
crates/felix-qa/src/: lib.rs
crates/felix-segmenter/: Cargo.toml
crates/felix-segmenter/src/: lib.rs
crates/felix-tm/: Cargo.toml
crates/felix-tm/migrations/: 0001_initial.sql
crates/felix-tm/src/: error.rs  glossary.rs  lib.rs  record.rs  store.rs  tmx.rs  xliff.rs
docs/manual/: 00-quickstart-powerpoint.md  00-quickstart-word.md  01-about.md  02-getting-started.md  03-first-time.md  04-21-add-entry.md  04-navigation.md  05-menus.md  06-31-rule-manager.md  06-placement.md  07-1-word-translation-mode.md  07-2-word-review-mode.md  07-3-word-preferences.md  07-4-word-history.md  07-word.md  08-1-excel-translation-mode.md  08-2-excel-review-mode.md  08-3-excel-preferences.md  08-4-excel-history.md  08-excel.md  09-1-ppt-translation-mode.md  09-2-ppt-review-mode.md  09-3-ppt-preferences.md  09-powerpoint.md  10-faq.md  11-1-com-api-tutorial.md  11-2-1-app.md  11-2-2-app2.md  11-2-3-memories.md  11-2-4-memory.md  11-2-5-searchresult.md  11-2-6-searchresults.md  11-2-7-record.md  11-2-8-records.md  11-2-9-memorywindow.md  11-2-com-api-objects.md  11-3-com-api-samples.md  11-scripting.md  12-templates.md  13-troubleshooting.md  (+2 more)
office-addin/: manifest.xml  taskpane.html
src/: App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: http_api.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/commands/: ai.rs  formats.rs  glossary.rs  migration.rs  mod.rs  office.rs  qa.rs  settings.rs  tm.rs  update.rs
src/api/: index.ts
src/components/: Layout.tsx  MatchPanel.tsx  ScoreBar.tsx  Sidebar.tsx  UpdateBanner.tsx
src/types/: index.ts
src/utils/: qa.ts
src/views/: GlossaryManager.tsx  Help.tsx  MemoryBrowser.tsx  ProjectEditor.tsx  Settings.tsx  Workbench.tsx
