[workspace]
members = [
    "crates/cheshire-tm",
    "crates/cheshire-segmenter",
    "crates/cheshire-ai",
    "crates/cheshire-qa",
    "crates/cheshire-formats",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
zip = "2"
