[package]
name = "felix-cat"
version = "0.1.0"
edition = "2021"
description = "Felix CAT — Tauri desktop application"

[lib]
name = "felix_cat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

felix-tm = { path = "../crates/felix-tm" }
felix-ai = { path = "../crates/felix-ai" }
felix-qa = { path = "../crates/felix-qa" }
felix-segmenter = { path = "../crates/felix-segmenter" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
