[package]
name = "cheshire-cat"
version = "0.0.1"
edition = "2021"
description = "Cheshire CAT — Tauri desktop application"

[lib]
name = "cheshire_cat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

cheshire-tm = { path = "../crates/cheshire-tm" }
cheshire-ai = { path = "../crates/cheshire-ai" }
cheshire-qa = { path = "../crates/cheshire-qa" }
cheshire-segmenter = { path = "../crates/cheshire-segmenter" }
cheshire-formats = { path = "../crates/cheshire-formats" }

axum = "0.7"
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
