[package]
name = "cheshire-ai"
version = "0.1.0"
edition = "2021"
description = "AI integration (Ollama, DeepL, OpenAI-compatible) for Cheshire CAT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
dashmap = "5"
